LPD-49265 Fix Java module issue during ES sidecar startup initPhase3: step1, for the sidecar process, use module-path for ES libs dir instead of using classpath, and add necessary arguments.